--- a/index.html
+++ b/index.html
@@ -2299,6 +2299,6 @@ POST /quickbooks/reprocess_paused_events/:realm_id
         </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2.0"></script>
 </body>
 </html>
